--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cookie": "^1.0.2",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.18.0",
     "next": "15.4.4",
     "react": "19.1.0",
