--- a/package.json
+++ b/package.json
@@ -9,20 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "cookie": "^1.0.2",
-    "js-cookie": "^3.0.5",
-    "mongodb": "^6.18.0",
-    "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "uuid": "^11.1.0",
-    "zod": "^4.0.10"
+    "next": "15.4.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "tailwindcss": "^4"
+    "@eslint/eslintrc": "^3"
   }
 }
