--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "next": "15.4.4",
+    "js-cookie": "^3.0.5",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
