--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:quick": "node scripts/quick-test.js",
+    "test:load": "node scripts/load-test.js"
   },
   "dependencies": {
     "react": "19.1.0",
@@ -15,7 +17,8 @@
     "js-cookie": "^3.0.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
