Refactor package.json to remove unused test scripts and streamline dependencies. Update AdminPage to handle potential null values in user count data, ensuring robust display of user statistics. Enhance leaderboard API to support quiz-specific queries and limit entries returned. Refactor quiz submission logic to fetch quiz data from the database, improving reliability. Simplify WaitingRoom component to focus on quiz start status and user count display, enhancing user experience during waiting periods.

--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test:quick": "node scripts/quick-test.js",
-    "test:load": "node scripts/load-test.js",
-    "test:500-round1": "node scripts/500-users-round1-test.js",
-    "test:real-api": "node scripts/real-api-test.js",
-    "test:simple": "node scripts/simple-test.js"
+    "lint": "next lint"
+   
   },
   "dependencies": {
     "react": "19.1.0",
