--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-   
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "js-cookie": "^3.0.5",
+    "mongodb": "^6.18.0",
+    "next": "15.4.4",
+    "node-fetch": "^2.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4",
-    "js-cookie": "^3.0.5",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4",
-    "mongodb": "^6.3.0",
-    "axios": "^1.6.0",
-    "node-fetch": "^2.7.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
